# CPE_JeuxVideo

./: .gitignore  CMakeLists.txt  Makefile  collidable.cpp  collidable.h  events.cpp  events.h  game.cpp  game.h  main.cpp  player.cpp  player.h  sceneManager.cpp  sceneManager.h  tir.cpp  tir.h
data/X-Wing/: 1st_Person_Cockpit.mtl  untitled.mtl
data/tir/: tir.mtl
src/: ISceneNodeAnimator6D.cpp  ISceneNodeAnimator6D.h  basicObject.cpp  basicObject.h  behaviourNode.cpp  behaviourNode.h  collidable.cpp  collidable.h  component.h  events.cpp  events.h  gameEngine.cpp  gameEngine.h  gameNode.cpp  gameNode.h  gameObject.cpp  gameObject.h  main.cpp  node.cpp  node.h  object.cpp  object.h  player.cpp  player.h  scene.cpp  scene.h  sceneManager.cpp  sceneManager.h  tir.cpp  tir.h
